[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://sprites/smokeWhite1.png" type="Texture" id=2]
[ext_resource path="res://sprites/bulletRed1_outline.png" type="Texture" id=3]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=4]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=5]
[ext_resource path="res://sprites/explosion3.png" type="Texture" id=6]
[ext_resource path="res://sprites/explosion4.png" type="Texture" id=7]
[ext_resource path="res://sprites/explosion5.png" type="Texture" id=8]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.125926, 1 )
colors = PoolColorArray( 1, 1, 1, 0.572549, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.368 ), 0.0, 0.0, 0, 0, Vector2( 0.98944, 0.632 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 10.3333
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.30079
height = 6.02106

[sub_resource type="Animation" id=7]
resource_name = "destroyed"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("self_destroy:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("self_destroy:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Bullet" type="Area2D" groups=[
"cannon_bullets",
]]
collision_layer = 8
collision_mask = 6
script = ExtResource( 1 )

[node name="smoke" type="Particles2D" parent="."]
position = Vector2( -6.68714, 0 )
amount = 20
lifetime = 0.5
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 6 )

[node name="sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="notifier" type="VisibilityNotifier2D" parent="."]
scale = Vector2( -0.611684, -0.385054 )

[node name="anim_auto_destroy" type="AnimationPlayer" parent="."]
anims/destroyed = SubResource( 7 )

[node name="self_destroy" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.656579, 0.656579 )
texture = ExtResource( 8 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="notifier" to="." method="_on_notifier_screen_exited"]
